--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <span class="animate home-img" style="--i:7;"></span>
     </section>
 
-    <!-- Design da Section SOBRE -->
+    <!-- ------SOBRE------ -->
 
     <section class="sobre" id="Sobre">
         <h2 class="heading">Sobre <span>Junior Pinho</span></h2>
