--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 Minha jornada na programação começou com as bases: linguagens <em>Java</em> e <em>C</em> (lógica de programação, algoritmos e programação orientada a objetos) e rapidamente expandiu-se para incluir uma ampla gama de tecnologias, como <em>HTML</em>, <em>CSS</em> e <em>JavaScript</em>, <em>C#</em>, <em>Python</em>, <em>SQL</em> e linguagem <em>R</em>.<br> Além disso, estou bem familiarizado com ferramentas de controle de versão, como <em>Git</em> e <em>GitHub</em>.
             </p>
             <p>
-                Meu portfólio inclui uma série de projetos interessantes, que vão desde <strong>web sites</strong> responsivos criados em Javascript; <strong>análises de dados</strong> em SQL e Python; até <strong>aplicativos</strong>, e <strong>automações</strong> criados com Python e C#. Cada projeto é uma oportunidade para aplicar minha paixão pela resolução de problemas e minha criatividade na criação de soluções práticas e eficientes.
+                Meu portfólio inclui uma série de projetos interessantes, que vão desde <strong>web sites</strong> responsivos criados em Javascript; <strong>análises de dados</strong> em SQL e Python; até <strong>aplicativos</strong> e <strong>automações</strong> criados com Python e C#. Cada projeto é uma oportunidade para aplicar minha paixão pela resolução de problemas e minha criatividade na criação de soluções práticas e eficientes.
                 <strong>“Vamos desenvolver algo incrível juntos!”</strong>.
             </p>
             <div class="btn-box btns">
