--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- box-icons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Language-->
+    <link rel="alternate" hreflang="en-US" href="https://juniorpinho.tech/languages/english" />
+    <link rel="alternate" hreflang="pt-BR" href="https://juniorpinho.tech/" />
     
     
 </head>
