--- a/languages/english.html
+++ b/languages/english.html
@@ -13,7 +13,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Language-->
-    <link rel="alternate" hreflang="en-US" href="https://juniorpinho.tech/en/" />
+    <link rel="alternate" hreflang="en-US" href="https://juniorpinho.tech/languages/english" />
     <link rel="alternate" hreflang="pt-BR" href="https://juniorpinho.tech/" />
 
 </head>
