--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <div class="content">
                             <div class="ano"><i class='bx bxs-calendar'></i>Outubro 2023 - Atualmente </div>
                             <h3>Floripa Mais Tec</h3>
-                            <p>Instituição: SENAI/SEBRAE/ACATE/PMF/LAB365</a></p>
+                            <p>Instituição: SENAI/SEBRAE/PMF/LAB365</a></p>
                             <p><strong>Duração:</strong> 900 horas</p>
                             <p><strong>Período atual:</strong> 1ª fase</p>
                             <details> <summary>Descrição sobre o treinamento</summary>
@@ -143,6 +143,20 @@
                                     Ao longo do programa, o aluno participa de uma jornada de qualificação profissional com o suporte necessário para ingressar na área de TI, conectar-se com outros profissionais da área que possuem vivência no mercado de trabalho e conciliando as formações com suas demais atividades pessoais.
                                 </p>
                             </details>
+                        </div>
+                    </div>
+                    
+                    <div class="certificado-content">
+                        <div class="content">
+                            <div class="ano"><i class='bx bxs-calendar'></i>Julho 2017 - Julho 2022 </div>
+                            <h3>Bacharelado - Ciências Econômicas</h3>
+                            <p>Instituição: UFSC - Universidade Federal de Santa Catarina</a></p>
+                            <p><strong>Situação atual:</strong> 5ª fase (Trancado)</p>
+                            <!-- <details> <summary>Descrição sobre a graduação</summary>
+                                <p>
+                                    
+                                </p>
+                            </details> -->
                         </div>
                     </div>
                 </div>
@@ -518,7 +532,12 @@
                         </div>
 
                         <div class="level">
-                            <h3>Desenvolvimento Web <span>70%</span></h3>
+                            <h3>Desenvolvimento Web <span>75%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+
+                        <div class="level">
+                            <h3>Desenvolvimento Mobile <span>50%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
@@ -557,7 +576,12 @@
                         </div>
 
                         <div class="level">
-                            <h3>Angular <span>10%</span></h3>
+                            <h3>Figma <span>70%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+
+                        <div class="level">
+                            <h3>Angular <span>30%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
@@ -570,6 +594,7 @@
                             <h3>.NET <span>10%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -581,7 +606,7 @@
                 <div class="skills-box">
                     <div class="skills-content">
                         <div class="level">
-                            <h3>Kamban <span>30%</span></h3>
+                            <h3>Kanban <span>85%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
