--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                 Olá! Sou <em>Jedir de O. Pinho Junior</em>, mais conhecido por apenas <strong>Junior Pinho</strong>, um desenvolvedor apaixonado pela tecnologia e em constante busca pelo próximo desafio. Atualmente, estou cursando graduação em <strong>Ciência da Computação</strong> na <strong>Faculdade Descomplica - <em>Centro Universitário União das Américas Descomplica</em></strong>, o que me proporciona uma base sólida para meu trabalho.
             </p>
             <p>
-                Minha jornada na programação começou com as bases: linguagens <em>Java</em> e <em>C</em> (lógica de programação, algoritmos e programação orientada a objetos) e rapidamente expandiu-se para incluir uma ampla gama de tecnologias, como <em>HTML</em>, <em>CSS</em> e <em>JavaScript</em>, <em>C#</em>, <em>Python</em>, <em>SQL</em> e linguagem <em>R</em>.<br> Além disso, estou bem familiarizado com ferramentas de controle de versão, como <em>Git</em> e <em>GitHub</em>.
+                Minha jornada na programação começou com as bases: linguagens <em>Java</em> e <em>C</em> (lógica de programação, algoritmos e programação orientada a objetos) e rapidamente expandiu-se para incluir uma ampla gama de tecnologias, como <em>HTML</em>, <em>CSS</em>, <em>JavaScript</em>, <em>Java</em>, <em>C#</em>, <em>SQL</em> e linguagem <em>R</em>.<br> Além disso, estou bem familiarizado com ferramentas de controle de versão, como <em>Git</em> e <em>GitHub</em>.
             </p>
             <p>
-                Meu portfólio inclui uma série de projetos interessantes, que vão desde <strong>web sites</strong> responsivos criados em Javascript; <strong>análises de dados</strong> em SQL e Python; até <strong>aplicativos</strong>, <strong>robôs</strong> e <strong>automações</strong> criados com Python e C#. Cada projeto é uma oportunidade para aplicar minha paixão pela resolução de problemas e minha criatividade na criação de soluções práticas e eficientes.
+                Meu portfólio inclui uma série de projetos interessantes, que vão desde <strong>web sites</strong> responsivos criados em Javascript; <strong>análises de dados</strong> em SQL e R; até <strong>aplicativos</strong>, <strong>robôs</strong> e <strong>automações</strong> criados com Java e C#. Cada projeto é uma oportunidade para aplicar minha paixão pela resolução de problemas e minha criatividade na criação de soluções práticas e eficientes.
                 <strong>“Vamos desenvolver algo incrível juntos!”</strong>.
             </p>
             <div class="btn-box btns">
@@ -134,10 +134,11 @@
                     <div class="certificado-content">
                         <div class="content">
                             <div class="ano"><i class='bx bxs-calendar'></i>Outubro 2023 - Atualmente </div>
-                            <h3>Floripa Mais Tec</h3>
+                            <h3>Floripa Mais Tec - Futuro DEV</h3>
                             <p>Instituição: SENAI/SEBRAE/PMF/LAB365</a></p>
-                            <p><strong>Duração:</strong> 900 horas</p>
-                            <p><strong>Período atual:</strong> 3ª fase</p>
+                            <p><strong>Duração:</strong> 600 horas</p>
+                            <p><strong>Tag:</strong> React, Javascript, Node.js, Express, PostgreSQL, CSS, HTML</p>
+
                             <details> <summary>Descrição sobre o treinamento</summary>
                                 <p>
                                     O Floripa Mais Tec é uma iniciativa da Prefeitura de Florianópolis, em parceria com SENAI/SC, SEBRAE e ACATE. <br>
@@ -561,8 +562,24 @@
     
                 <div class="skills-box">
                     <div class="skills-content">
+
+                        <div class="level">
+                            <h3>React <span>30%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+
+                        <div class="level">
+                            <h3>Angular <span>10%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+
                         <div class="level">
                             <h3>Git & GitHub <span>90%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+
+                        <div class="level">
+                            <h3>NPM <span>80%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
@@ -572,12 +589,7 @@
                         </div>
 
                         <div class="level">
-                            <h3>Angular <span>30%</span></h3>
-                            <div class="bar"><span></span></div>
-                        </div>
-
-                        <div class="level">
-                            <h3>React <span>10%</span></h3>
+                            <h3>Photoshop <span>70%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
@@ -648,8 +660,6 @@
                 
             </div>
         </div>
-
-
 
     </section>
 
