--- a/languages/english.html
+++ b/languages/english.html
@@ -93,7 +93,7 @@
                 My programming journey started with the basics: <em>Java</em> and <em>C</em> languages (programming logic, algorithms and object-oriented programming) and quickly expanded to include a wide range of technologies such as <em>HTML</em>, <em>CSS</em>, <em>JavaScript</em>, <em>Java</em>, <em>C#</em>, <em>SQL</em> and <em>R</em> language.<br> Additionally, I am very familiar with version control tools such as <em>Git</em> and <em>GitHub</em>.
             </p>
             <p>
-                My portfolio includes a series of interesting projects, ranging from responsive <strong>web sites</strong> created in Javascript; <strong>data analysis</strong> in SQL and R; even <strong>applications</strong>, <strong>robots</strong> and <strong>automations</strong> created with Java and C#. Each project is an opportunity to apply my passion for problem solving and my creativity to create practical and efficient solutions.
+                My portfolio includes a series of interesting projects, ranging from responsive <strong>web sites</strong> created in Javascript; <strong>Web systems</strong>, intelligent systems (CRUD); <strong>data analysis</strong> in SQL and R; even <strong>applications</strong>, <strong>robots</strong> and <strong>automations</strong> created with Java and C#. Each project is an opportunity to apply my passion for problem solving and my creativity to create practical and efficient solutions.
                 <strong>“Let’s develop something incredible together!”</strong>.
             </p>
             <div class="btn-box btns">
@@ -118,7 +118,7 @@
                             <h3>Bachelor's Degree - Computer Science</h3>
                             <p>University: Faculdade Descomplica</a></p>
                             <p><strong>Duration:</strong> 4 Years</p>
-                            <p><strong>Current Semester:</strong> 4rd semester</p>
+                            <p><strong>Current Semester:</strong> 5rd semester</p>
                             <details> <summary>Description of the degree</summary>
                                 <p>
                                     Bachelor's degree in Computer Science with an emphasis on Fullstack Development. Throughout the course, students gain a solid understanding of the fundamentals of Computer Science, covering algorithms, data structures, theory of computation, and programming paradigms. It prepares professionals to work in various areas of the market, including technology, software companies, data analysis, web systems, digital agencies, consulting firms, and startups.
@@ -132,7 +132,7 @@
                             <div class="ano"><i class='bx bxs-calendar'></i>October 2023 - Present </div>
                             <h3>Floripa Mais Tec - Futuro DEV</h3>
                             <p>Institution: SENAI/SEBRAE/PMF/LAB365</a></p>
-                            <p><strong>Duration:</strong> 600 hours</p>
+                            <p><strong>Duration:</strong> 700 hours</p>
                             <p><strong>Tag:</strong> React, Javascript, Node.js, Express, PostgreSQL, CSS, HTML</p>
                             <details> <summary>Description of the training</summary>                           
                                 <p>
