--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 Minha jornada na programação começou com as bases: linguagens <em>Java</em> e <em>C</em> (lógica de programação, algoritmos e programação orientada a objetos) e rapidamente expandiu-se para incluir uma ampla gama de tecnologias, como <em>HTML</em>, <em>CSS</em>, <em>JavaScript</em>, <em>Java</em>, <em>C#</em>, <em>SQL</em> e linguagem <em>R</em>.<br> Além disso, estou bem familiarizado com ferramentas de controle de versão, como <em>Git</em> e <em>GitHub</em>.
             </p>
             <p>
-                Meu portfólio inclui uma série de projetos interessantes, que vão desde <strong>web sites</strong> responsivos criados em Javascript; <strong>análises de dados</strong> em SQL e R; até <strong>aplicativos</strong>, <strong>robôs</strong> e <strong>automações</strong> criados com Java e C#. Cada projeto é uma oportunidade para aplicar minha paixão pela resolução de problemas e minha criatividade na criação de soluções práticas e eficientes.
+                Meu portfólio inclui uma série de projetos interessantes, que vão desde <strong>web sites</strong> responsivos criados em Javascript; <strong>sistemas Web</strong>, sistemas inteligentes (CRUD); <strong>análises de dados</strong> em SQL e R; até <strong>aplicativos</strong>, <strong>robôs</strong> e <strong>automações</strong> criados com Java e C#. Cada projeto é uma oportunidade para aplicar minha paixão pela resolução de problemas e minha criatividade na criação de soluções práticas e eficientes.
                 <strong>“Vamos desenvolver algo incrível juntos!”</strong>.
             </p>
             <div class="btn-box btns">
@@ -120,7 +120,7 @@
                             <h3>Bacharelado - Ciências da Computação</h3>
                             <p>Instituição: Faculdade Descomplica</a></p>
                             <p><strong>Duração:</strong> 4 Anos</p>
-                            <p><strong>Período atual:</strong> 4ª fase</p>
+                            <p><strong>Período atual:</strong> 5ª fase</p>
                             <details> <summary>Descrição sobre a graduação</summary>
                                 <p>
                                     Bacharelado em Ciência da Computação com ênfase em Desenvolvimento Fullstack.
@@ -136,7 +136,7 @@
                             <div class="ano"><i class='bx bxs-calendar'></i>Outubro 2023 - Atualmente </div>
                             <h3>Floripa Mais Tec - Futuro DEV</h3>
                             <p>Instituição: SENAI/SEBRAE/PMF/LAB365</a></p>
-                            <p><strong>Duração:</strong> 600 horas</p>
+                            <p><strong>Duração:</strong> 700 horas</p>
                             <p><strong>Tag:</strong> React, Javascript, Node.js, Express, PostgreSQL, CSS, HTML</p>
 
                             <details> <summary>Descrição sobre o treinamento</summary>
