update certificados e skills

--- a/index.html
+++ b/index.html
@@ -190,27 +190,115 @@
 
                 <div class="certificado-box">
 
+                    
                     <div class="certificado-content">
                         <div class="content">
-                            <div class="ano"><i class='bx bxs-calendar'></i>Dezembro 2022</div>
-                            <h3>Programming Basics</h3>
-                            <p><sub>Faculdade Descomplica</sub></p>
-                            <p>Programação básica</p>
+                            <div class="ano"><i class='bx bxs-calendar'></i>Março 2024</div>
+                            <h3>Cloud Platform</h3>
+                            <p><sub>Plataforma em núvem</sub></p>
+                            <p>Faculdade Descomplica</p>
                             <p><strong>Carga horária:</strong> 160 horas</p>
                             <p>
                                 <strong>TÓPICOS ABORDADOS:</strong>
-                                Algorititmos; Tipos de dados primitívos; Variáveis e constantes;
-                                Entradas, processamentos e saídas; Estrutura de desisão; Estrutura de repetição; Vetor; Matriz; Procedimentos sem Parâmetros;
-                                Procedimentos com Parâmetros;
-                                Funções sem parâmetros;
-                                Funções com Parâmetros;
-                                Visão Geral da Linguagem Java;
-                                Introdução à Linguagem Java;
-                                Estrutura de Controle no Java;
-                                Módulos e matrizes em Java.
+                                Arquitetura de aplicações em Camadas;
+                                Padrões de e-business;
+                                Melhores práticas;
+                                Serviços, Protocolos e servidores WEB;
+                                Infraestrutura básica de segurança para web;
+                                Servidores de Portais Corporativos;
+                                Arquitetura Orientada a Serviço;
+                                Fundamentos de Cloud Computing: terminologias e conceitos;
+                                Software as a Service (SaaS);
+                                Platform as a Service (PaaS);
+                                Infrastructure as a Service (IaaS);
+                                Benefícios, desafios e riscos das plataformas e serviços;
+                                Service Level Agreements (SLAs) para serviços de Cloud;
+                                Análise de desempenho;
+                                Migração e transformação de servidores para provedores de nuvem;
+                                O futuro e a evolução dos serviços Cloud;
+                                Introdução à Redes;
+                                Tecnologias e Protocolos;
+                                Principais Modelos;
+                                Comunicação e Camada Física;
+                                Cabeamentos e Conexões;
+                                Conversões e Sistemas Numéricos;
+                                Camada de Enlace;
+                                Comutação Ethernet;
+                                Camada de Rede;
+                                Resolução de Endereços e Estrutura IPv4;
+                                Endereços e Segmentação no IPv4;
+                                Endereçamento IPv6;
+                                Camada de Transporte;
+                                Camada de Aplicação;
+                                Projetando uma rede;
+                                Tópicos Avançados de Redes;
+                                Os métodos e suas aplicações;
+                                Engenharia de software;
+                                Cascata;
+                                Lean;
+                                Manifesto Ágil;
+                                Princípios 1 a 4 do manifesto ágil;
+                                Princípios 5 a 8 do manifesto ágil;
+                                Princípios 9 a 12 do manifesto ágil;
+                                Scrum e Kanban;
+                                Desenvolvendo no Trello;
+                                Por que inovar?;
+                                Imersão;
+                                Análise e Síntese;
+                                Ideação;
+                                Prototipação;
+                                Protótipo;
+
                             </p>
                         </div>
                     </div>
+
+                    <div class="certificado-content">
+                        <div class="content">
+                            <div class="ano"><i class='bx bxs-calendar'></i>Novembro 2023</div>
+                            <h3>Mobile Developer</h3>
+                            <p><sub>Desenvolvimento Mobile</sub></p>
+                            <p>Faculdade Descomplica</p>
+                            <p><strong>Carga horária:</strong> 160 horas</p>
+                            <p>
+                                <strong>TÓPICOS ABORDADOS:</strong>
+                                Introdução ao Angular;
+                                Módulos Rotas e Componentes;
+                                Conceitos Básicos do Angular;
+                                Rotas e Segurança dos componentes;
+                                RxJS e dados Assíncronos;
+                                Manipular dados utilizando JSON;
+                                Angular Material e Formulários;
+                                Formulários;
+                                Validação avançada de dados;
+                                Comunicação entre componentes;
+                                Componentes avançado em Angular;
+                                Introdução ao IONIC;
+                                Reimplementando o formulário no ionic;
+                                Implementando uma lista de dados;
+                                Incrementando a lista e formulário;
+                                Simulando o app no dispositivo;
+                                Fundamentos sobre Design Thinking;
+                                Técnicas para o Design Thinking;
+                                Levantamento de requisitos para projetos mobile;
+                                Trabalhando com o método Kanban;
+                                Usabilidade de softwares na prática;
+                                Projetando a navegabilidade da interface gráfica;
+                                App PWA com Typescript Angular;
+                                Bancos de dados para apps;
+                                Criação de API para banco de dados;
+                                Trabalhando com GitHub;
+                                Arquitetura de Projetos Mobile;
+                                Banco de dados local com Ionic e imagens;
+                                Adicionando suporte para GPS IONIC;
+                                Adicionando Push Notification;
+                                Modificando o app para um projeto postos de gasolina;
+                                Mapa e conexão com a API;
+                            </p>
+                        </div>
+                    </div>
+
+
 
                     <div class="certificado-content">
                         <div class="content">
@@ -317,6 +405,29 @@
                             </p>
                         </div>
                     </div>
+
+                    <div class="certificado-content">
+                        <div class="content">
+                            <div class="ano"><i class='bx bxs-calendar'></i>Dezembro 2022</div>
+                            <h3>Programming Basics</h3>
+                            <p><sub>Faculdade Descomplica</sub></p>
+                            <p>Programação básica</p>
+                            <p><strong>Carga horária:</strong> 160 horas</p>
+                            <p>
+                                <strong>TÓPICOS ABORDADOS:</strong>
+                                Algorititmos; Tipos de dados primitívos; Variáveis e constantes;
+                                Entradas, processamentos e saídas; Estrutura de desisão; Estrutura de repetição; Vetor; Matriz; Procedimentos sem Parâmetros;
+                                Procedimentos com Parâmetros;
+                                Funções sem parâmetros;
+                                Funções com Parâmetros;
+                                Visão Geral da Linguagem Java;
+                                Introdução à Linguagem Java;
+                                Estrutura de Controle no Java;
+                                Módulos e matrizes em Java.
+                            </p>
+                        </div>
+                    </div>
+
 
                     <div class="certificado-content">
                         <div class="content">
@@ -480,12 +591,12 @@
                 <div class="skills-box">
                     <div class="skills-content">
                         <div class="level"> <!--1-->
-                            <h3>HTML5<span> 90%</span></h3>
+                            <h3>HTML5<span> 95%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="level"> <!--2-->
-                            <h3>CSS3<span> 80%</span></h3>
+                            <h3>CSS3<span> 85%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
@@ -524,12 +635,12 @@
                         </div>
 
                         <div class="level">
-                            <h3>Desenvolvimento Web <span>80%</span></h3>
+                            <h3>Desenvolvimento Web <span>90%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="level">
-                            <h3>Desenvolvimento Mobile <span>50%</span></h3>
+                            <h3>Desenvolvimento Mobile <span>80%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
@@ -564,7 +675,7 @@
                     <div class="skills-content">
 
                         <div class="level">
-                            <h3>React <span>60%</span></h3>
+                            <h3>React <span>70%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
