update texto  sobre

--- a/index.html
+++ b/index.html
@@ -89,15 +89,17 @@
         <div class="about-content">
             <h3>Desenvolvedor FullStack</h3>
             <p>
-                Olá! Sou <em>Jedir de O. Pinho Junior</em>, mais conhecido por apenas <strong>Junior Pinho</strong>, um desenvolvedor apaixonado pela tecnologia e em constante busca pelo próximo desafio. Atualmente, estou cursando graduação em <strong>Ciência da Computação</strong> na <strong>Faculdade Descomplica - <em>Centro Universitário União das Américas Descomplica</em></strong>, o que me proporciona uma base sólida para meu trabalho.
+                Olá! Sou <em>Jedir de O. Pinho Junior</em>, mais conhecido por apenas <strong>Junior Pinho</strong>, um desenvolvedor apaixonado pela tecnologia e em constante busca pelo próximo desafio. 
+                Atualmente, estou me graduando em <strong>Ciência da Computação</strong> na <strong>Faculdade Descomplica - <em>Centro Universitário União das Américas Descomplica</em></strong>, o que me proporciona uma base sólida para meu conhecimento. Além disso, tenho orgulho de dizer que sou aluno do <strong>Floripa Mais Tec</strong> - <em>Turma "Fitness"</em>, uma iniciativa da Prefeitura de Florianópolis, em parceria com <strong>SENAI/SC</strong>, <strong>SEBRAE </strong>e <strong>ACATE</strong>.
             </p>
             <p>
-                Minha jornada na programação começou com as bases: linguagens <em>Java</em> e <em>C</em> (lógica de programação, algoritmos e programação orientada a objetos) e rapidamente expandiu-se para incluir uma ampla gama de tecnologias, como <em>HTML</em>, <em>CSS</em>, <em>JavaScript</em>, <em>Java</em>, <em>C#</em>, <em>SQL</em> e linguagem <em>R</em>.<br> Além disso, estou bem familiarizado com ferramentas de controle de versão, como <em>Git</em> e <em>GitHub</em>.
+                Minha jornada na programação teve início com as bases em linguagens <strong>C</strong> e <strong>Java</strong>, onde adquiri conhecimentos fundamentais em <strong>lógica de programação</strong>, <strong>algoritmos</strong> e <strong>programação orientada a objetos</strong>. Desde então, expandi meu domínio para diversas outras tecnologias, como <strong>JavaScript</strong>, <strong>React</strong>, <strong>node.js</strong>, <strong>Java</strong>, <strong>HTML</strong>, <strong>CSS</strong> e <strong>SQL</strong> (<em>PostgreSQL</em> e <em>MySQL</em>). Além disso, estou bem familiarizado com ferramentas de <em>controle de versão,</em> como <strong>Git</strong> e <strong>GitHub</strong> e ferramentas de <em>metodologias ágeis</em> como <strong>Trello</strong>.
             </p>
             <p>
-                Meu portfólio inclui uma série de projetos interessantes, que vão desde <strong>web sites</strong> responsivos criados em Javascript; <strong>sistemas Web</strong>, sistemas inteligentes (CRUD); <strong>análises de dados</strong> em SQL e R; até <strong>aplicativos</strong>, <strong>robôs</strong> e <strong>automações</strong> criados com Java e C#. Cada projeto é uma oportunidade para aplicar minha paixão pela resolução de problemas e minha criatividade na criação de soluções práticas e eficientes.
+                Em meu portfólio, destaco projetos que abrangem desde <strong>websites</strong> estáticos e responsivos desenvolvidos em Javascript até <strong>sistemas Web <em>(CRUD)</em></strong> com ênfase em banco de dados <strong>PostgreSQL</strong> e <strong>React <em>(PERN)</em></strong>. Cada projeto representa uma oportunidade para aplicar <strong>minha paixão</strong> pela resolução de problemas e minha criatividade na concepção de soluções práticas e eficazes.
                 <strong>“Vamos desenvolver algo incrível juntos!”</strong>.
             </p>
+
             <div class="btn-box btns">
                 <a href="#Estudos" class="btn">Leia Mais</a>
             </div>
