--- a/languages/english.html
+++ b/languages/english.html
@@ -87,15 +87,17 @@
         <div class="about-content">
             <h3>FullStack Developer</h3>  
             <p>
-                Hello! I'm <em>Jedir de O. Pinho Junior</em>, better known as just <strong>Junior Pinho</strong>, a developer passionate about technology and constantly looking for the next challenge. I am currently studying a degree in <strong>Computer Science</strong> at <strong>Faculdade Descomplica - <em>Centro Universitário União das Américas Descomplica (Brazil)</em></strong>, which provides me with a solid foundation for my work.
+                Hello! I'm <em>Jedir de O. Pinho Junior</em>, better known as <strong>Junior Pinho</strong>, a developer passionate about technology and constantly seeking the next challenge. 
+                Currently, I'm graduating in <strong>Computer Science</strong> at <strong>Faculdade Descomplica - <em>Centro Universitário União das Américas Descomplica</em></strong>, which provides me with a solid foundation for my knowledge. Additionally, I'm proud to say that I'm a student of <strong>Floripa Mais Tec</strong> - <em>Class "Fitness"</em>, an initiative of the Municipality of Florianópolis, in partnership with <strong>SENAI/SC</strong>, <strong>SEBRAE</strong>, and <strong>ACATE</strong>.
             </p>
             <p>
-                My programming journey started with the basics: <em>Java</em> and <em>C</em> languages (programming logic, algorithms and object-oriented programming) and quickly expanded to include a wide range of technologies such as <em>HTML</em>, <em>CSS</em>, <em>JavaScript</em>, <em>Java</em>, <em>C#</em>, <em>SQL</em> and <em>R</em> language.<br> Additionally, I am very familiar with version control tools such as <em>Git</em> and <em>GitHub</em>.
+                My programming journey began with the basics in <strong>C</strong> and <strong>Java</strong>, where I acquired fundamental knowledge in <strong>programming logic</strong>, <strong>algorithms</strong>, and <strong>object-oriented programming</strong>. Since then, I have expanded my skills to various other technologies, such as <strong>JavaScript</strong>, <strong>React</strong>, <strong>node.js</strong>, <strong>Java</strong>, <strong>HTML</strong>, <strong>CSS</strong>, and <strong>SQL</strong> (<em>PostgreSQL</em> and <em>MySQL</em>). Additionally, I am well acquainted with <em>version control</em> tools like <strong>Git</strong> and <strong>GitHub</strong>, and <em>agile methodologies</em> tools like <strong>Trello</strong>.
             </p>
             <p>
-                My portfolio includes a series of interesting projects, ranging from responsive <strong>web sites</strong> created in Javascript; <strong>Web systems</strong>, intelligent systems (CRUD); <strong>data analysis</strong> in SQL and R; even <strong>applications</strong>, <strong>robots</strong> and <strong>automations</strong> created with Java and C#. Each project is an opportunity to apply my passion for problem solving and my creativity to create practical and efficient solutions.
-                <strong>“Let’s develop something incredible together!”</strong>.
+                In my portfolio, I showcase projects that range from static and responsive <strong>websites</strong> developed in Javascript to <strong>Web systems <em>(CRUD)</em></strong> with a focus on <strong>PostgreSQL</strong> and <strong>React <em>(PERN)</em></strong>. Each project represents an opportunity to apply <strong>my passion</strong> for problem-solving and my creativity in designing practical and effective solutions.
+                <strong>“Let's develop something amazing together!”</strong>.
             </p>
+            
             <div class="btn-box btns">
                 <a href="#Estudos" class="btn">Read more</a>
             </div>
