feat: 🎸 correção informação tempo curso

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             <div class="ano"><i class='bx bxs-calendar'></i>Outubro 2023 - Atualmente </div>
                             <h3>Floripa Mais Tec - Futuro DEV</h3>
                             <p>Instituição: SENAI/SEBRAE/PMF/LAB365</a></p>
-                            <p><strong>Duração:</strong> 700 horas</p>
+                            <p><strong>Duração:</strong> 600 horas (7 meses e meio)</p>
                             <p><strong>Tag:</strong> React, Javascript, Node.js, Express, PostgreSQL, CSS, HTML</p>
 
                             <details> <summary>Descrição sobre o treinamento</summary>
