docs: ✏️ atualização CV inglês

--- a/languages/english.html
+++ b/languages/english.html
@@ -54,7 +54,7 @@
                     <span class="animate" style="--i:4;"></span>
                 </p>
                 <div class="btn-box">
-                    <a href="../PDF/CV (English)  - JEDIR DE OLIVEIRA PINHO JUNIOR.pdf" download="CV (English)  - JEDIR DE OLIVEIRA PINHO JUNIOR.pdf" target="_blank" class="btn">Hire me</a>
+                    <a href="../PDF/CV Developer - JEDIR DE OLIVEIRA PINHO JUNIOR.pdf" download="CV Developer - JEDIR DE OLIVEIRA PINHO JUNIOR.pdf" target="_blank" class="btn">Hire me</a>
                                         
                     <a href="https://wa.me/+5548999593996" class="btn" target="_blank">Let's talk</a>                  
                     <span class="animate" style="--i:5;"></span>
