feat: 🎸 Atualiza dados graduacao e FMT

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Language-->
-    <link rel="alternate" hreflang="en-US" href="https://juniorpinho.tech/languages/english" />
-    <link rel="alternate" hreflang="pt-BR" href="https://juniorpinho.tech/" />
+    <link rel="alternate" hreflang="en-US" href="https://juniorpinho.dev/languages/english" />
+    <link rel="alternate" hreflang="pt-BR" href="https://juniorpinho.dev/" />
     
     
 </head>
@@ -122,7 +122,7 @@
                             <h3>Bacharelado - Ciências da Computação</h3>
                             <p>Instituição: Faculdade Descomplica</a></p>
                             <p><strong>Duração:</strong> 4 Anos</p>
-                            <p><strong>Período atual:</strong> 5ª fase</p>
+                            <p><strong>Período atual:</strong> 7ª fase</p>
                             <details> <summary>Descrição sobre a graduação</summary>
                                 <p>
                                     Bacharelado em Ciência da Computação com ênfase em Desenvolvimento Fullstack.
@@ -135,11 +135,11 @@
 
                     <div class="certificado-content">
                         <div class="content">
-                            <div class="ano"><i class='bx bxs-calendar'></i>Outubro 2023 - Atualmente </div>
+                            <div class="ano"><i class='bx bxs-calendar'></i>Outubro 2023 - Outubro 2024 </div>
                             <h3>Floripa Mais Tec - Futuro DEV</h3>
                             <p>Instituição: SENAI/SEBRAE/PMF/LAB365</a></p>
-                            <p><strong>Duração:</strong> 600 horas (7 meses e meio)</p>
-                            <p><strong>Tag:</strong> React, Javascript, Node.js, Express, PostgreSQL, CSS, HTML</p>
+                            <p><strong>Duração:</strong> 600 horas</p>
+                            <p><strong>Tag:</strong>React, HTML, CSS, JS, JSX, Node.js, Express, PostgreSQL, Sequelize, Migration, GitHub, GitFlow, Metodologias Ágeis, Docker, Virtualização, DevOps e Integração</p>
 
                             <details> <summary>Descrição sobre o treinamento</summary>
                                 <p>
@@ -530,7 +530,7 @@
                             </p>
                             <p>
                                 Atualmente trabalho em alguns projetos na web como: <br>
-                                <strong><em><a href="https://www.unicuteRelax.org" target="_blank">UnicuteRelax.org</a></em></strong><br>
+                                <strong><em><a href="https://www.juniorpinho.dev/unicute" target="_blank">UnicuteRelax.org</a></em></strong><br>
                                 <strong><em>Historinhas.net</em></strong> <em>"Aguarde"</em><br>
                                 <strong><em>HoraCerta.org</em></strong> <em>"Aguarde"</em>
                             </p>
@@ -541,7 +541,7 @@
                                 <div class="ano"><i class='bx bxs-calendar'></i>2023</div>
                                 <h3>Unicute Relax</h3>
                                 <p><sub>Projeto Pessoal</sub></p>
-                                <p><a href="http://www.unicute.org" target="_blank">UnicuteRelax.org</a></p>
+                                <p><a href="https://www.juniorpinho.dev/unicute" target="_blank">UnicuteRelax</a></p>
                                 <p>
                                     Sou o idealizador e criador do projeto, bem como <strong>desenvolvedor web</strong> e toda a parte de design grafico, redes sociais e conteúdos web.
                                 </p>
@@ -556,7 +556,7 @@
                                 <div class="ano"><i class='bx bxs-calendar'></i>2018 - 2022</div>
                                     <h3>Web Design</h3>
                                     <p><sub>Low Code| HTML | CSS | Photoshop</sub></p>
-                                    <p>Atuei como Web Designer, criando websites atrativos e    funcionais utilizando ferramentas <strong>LowCode</strong> com <strong>HTML</strong> e <strong>CSS</strong>, como: <strong>wordpress</strong>, <strong>Loja Integrada</strong> e <strong>Wix</strong>. Minha expertise inclui a criação de layouts e elementos gráficos utilizando o <strong>Adobe Photoshop</strong>, garantindo uma experiência visual envolvente para os usuários. Esta experiência desenvolveu minha habilidade em traduzir conceitos criativos em interfaces digitais, aprimorando a presença online das marcas.
+                                    <p>Atuei como Web Designer, criando websites atrativos e funcionais utilizando ferramentas <strong>LowCode</strong> com <strong>HTML</strong> e <strong>CSS</strong>, como: <strong>wordpress</strong>, <strong>Loja Integrada</strong> e <strong>Wix</strong>. Minha expertise inclui a criação de layouts e elementos gráficos utilizando o <strong>Adobe Photoshop</strong>, garantindo uma experiência visual envolvente para os usuários. Esta experiência desenvolveu minha habilidade em traduzir conceitos criativos em interfaces digitais, aprimorando a presença online das marcas.
                                     </p>
                             </div>
                         </div>
