feat: 🎸 Atualiza Experiencia fullstack

--- a/index.html
+++ b/index.html
@@ -523,16 +523,19 @@
 
                         <div class="content">
                             <div class="ano"><i class='bx bxs-calendar'></i>2022 - Atualmente</div>
-                            <h3>Desenvolvedor Web</h3>
-                            <p><sub>HTML | CSS | javascript | SQL</sub></p>
+                            <h3>Desenvolvedor Web Fullstack</h3>
+                            <p><sub>HTML | CSS | JavaScript | React | Node.js | Express | PostgreSQL | Sequelize | Docker</sub></p>
                             <p>
-                                Desenvolvo sites responsivos, modernos e visualmente atraentes com <strong>HTML 5</strong>, <strong>CSS 3</strong> e <strong>JavaScript</strong>, oferecendo soluções personalizadas e eficazes para atender às necessidades de cada cliente. Com habilidades em <strong>SEO</strong>, posso ajudar a <strong>otimizar seu site para melhorar seu ranking</strong> nos motores de busca. Conte comigo para trazer sua visão para a vida na web.
+                                Desenvolvo aplicações web completas e modernas, criando sites responsivos, sistemas web e CRUDs com integração frontend-backend. Utilizo tecnologias como <strong>React</strong> no frontend e <strong>Node.js</strong> com <strong>Express</strong> no backend, conectando a bancos de dados <strong>PostgreSQL</strong>. Todo o processo de desenvolvimento é alinhado com boas práticas, incluindo migrações de banco de dados (<strong>Sequelize</strong>), versionamento de código com <strong>GitHub</strong> e <strong>GitFlow</strong>, além de metodologias ágeis.
                             </p>
                             <p>
-                                Atualmente trabalho em alguns projetos na web como: <br>
+                                Utilizo <strong>Docker</strong> para virtualização e armazenamento de banco de dados, realizando deploy em plataformas de hospedagens, garantindo que os projetos estejam sempre disponíveis e escaláveis.
+                            </p>
+                            <p>
+                                <!-- Atualmente trabalho em alguns projetos como: <br>
                                 <strong><em><a href="https://www.juniorpinho.dev/unicute" target="_blank">UnicuteRelax.org</a></em></strong><br>
                                 <strong><em>Historinhas.net</em></strong> <em>"Aguarde"</em><br>
-                                <strong><em>HoraCerta.org</em></strong> <em>"Aguarde"</em>
+                                <strong><em>HoraCerta.org</em></strong> <em>"Aguarde"</em> -->
                             </p>
                         </div>
                     </div>
