--- a/index.html
+++ b/index.html
@@ -90,15 +90,21 @@
             <h3>Desenvolvedor FullStack</h3>
             <p>
                 Olá! Sou <em>Jedir de O. Pinho Junior</em>, mais conhecido por apenas <strong>Junior Pinho</strong>, um desenvolvedor apaixonado pela tecnologia e em constante busca pelo próximo desafio. 
-                Atualmente, estou me graduando em <strong>Ciência da Computação</strong> na <strong>Faculdade Descomplica - <em>Centro Universitário União das Américas Descomplica</em></strong>, o que me proporciona uma base sólida para meu conhecimento. Além disso, tenho orgulho de dizer que sou aluno do <strong>Floripa Mais Tec</strong> - Turma <em>"Fitness"</em>, uma iniciativa da Prefeitura de Florianópolis, em parceria com <strong>SENAI/SC</strong>, <strong>SEBRAE </strong>e <strong>ACATE</strong>.
+                Atualmente, estou me graduando em <strong>Ciência da Computação</strong> na <strong>Faculdade Descomplica - <em>Centro Universitário União das Américas Descomplica</em></strong>, o que me proporciona uma base sólida para meu conhecimento. Além disso, tenho orgulho de dizer que me formei no programa <strong>Floripa Mais Tec</strong> - Turma <em>"Fitness"</em>, uma iniciativa da Prefeitura de Florianópolis, em parceria com <strong>SENAI/SC</strong>, <strong>SEBRAE </strong>, <strong>ACATE</strong> e <strong>LAB365</strong>.
             </p>
             <p>
-                Minha jornada na programação teve início com as bases em linguagens <strong>C</strong> e <strong>Java</strong>, onde adquiri conhecimentos fundamentais em <strong>lógica de programação</strong>, <strong>algoritmos</strong> e <strong>programação orientada a objetos</strong>. Desde então, expandi meu domínio para diversas outras tecnologias, como <strong>JavaScript</strong>, <strong>React</strong>, <strong>node.js</strong>, <strong>Java</strong>, <strong>HTML</strong>, <strong>CSS</strong> e <strong>SQL</strong> (<em>PostgreSQL</em> e <em>MySQL</em>). Além disso, estou bem familiarizado com ferramentas de <em>controle de versão,</em> como <strong>Git</strong> e <strong>GitHub</strong> e ferramentas de <em>metodologias ágeis</em> como <strong>Trello</strong>.
+                Minha jornada na programação teve início com as bases em linguagens <strong>C</strong> e <strong>Java</strong>, onde adquiri conhecimentos fundamentais em <strong>lógica de programação</strong>, <strong>algoritmos</strong> e <strong>programação orientada a objetos</strong>. Desde então, expandi meu domínio para diversas outras tecnologias, como <strong>JavaScript</strong>, <strong>React</strong>, <strong>Node.js</strong>, <strong>Java</strong>, <strong>HTML</strong>, <strong>CSS</strong>, <strong>Docker</strong> e <strong>SQL</strong> (<em>PostgreSQL</em> e <em>MySQL</em>). Além disso, estou bem familiarizado com ferramentas de <em>controle de versão,</em> como <strong>Git</strong> e <strong>GitHub</strong> e ferramentas de <em>metodologias ágeis</em> como <strong>Trello</strong>.
             </p>
             <p>
-                Em meu portfólio, destaco projetos que abrangem desde <strong>websites</strong> estáticos e responsivos desenvolvidos em Javascript até <strong>sistemas Web <em>(CRUD)</em></strong> com ênfase em banco de dados <strong>PostgreSQL</strong> e <strong>React <em>(PERN)</em></strong>. Cada projeto representa uma oportunidade para aplicar <strong>minha paixão</strong> pela resolução de problemas e minha criatividade na concepção de soluções práticas e eficazes.
-                <strong>“Vamos desenvolver algo incrível juntos!”</strong>.
+                Em meu portfólio, destaco projetos que abrangem desde <strong>Web Sites</strong> estáticos e responsivos desenvolvidos em JavaScript até <strong>sistemas Web completos <em>(CRUD),</em></strong> utilizando <strong>PostgreSQL</strong>, <strong>Express.js</strong>, <strong>React</strong>, <strong>Node.js <em>(PERN).</em></strong> 
+                Alguns desses sistemas são containerizados com <strong>Docker</strong>, e o deploy é realizado para garantir eficiência e escalabilidade.
+                Cada projeto representa uma oportunidade para aplicar <strong>minha paixão</strong> pela programação e minha criatividade na concepção de soluções práticas e eficazes.
             </p>
+            <h3>
+                <strong>
+                “Vamos desenvolver algo incrível juntos!”
+                </strong>.
+            </h3>
 
             <div class="btn-box btns">
                 <a href="#Estudos" class="btn">Leia Mais</a>
