feat: 🎸 cria media query para modal

--- a/index.html
+++ b/index.html
@@ -120,9 +120,11 @@
                     <span class="close">&times;</span>
                     <h1><span>Sobre Mim </span></h1>
                     <p>
-                        Sou desenvolvedor Fullstack e atualmente estou na 7ª fase do curso de Ciências da Computação, que concluo em 2025. Antes de ingressar na área de tecnologia, trabalhei como Vigilante Patrimonial no Banco do Brasil por 10 anos, onde desenvolvi soft skills essenciais como habilidades interpessoais, controle emocional, gerenciamento de crises, pontualidade, disciplina e capacidade de gerenciar riscos. Essa experiência me proporcionou competências em autogestão, negociação e organização. </p>
-                        <p>
-                        Atualmente, continuo trabalhando na vigilância patrimonial na UFSC, mas estou em transição de carreira para a área de tecnologia. Me sinto preparado e confiante devido aos estudos e projetos que venho desenvolvendo. Tenho um portfólio disponível em juniorpinho.dev, onde você pode encontrar mais informações sobre minha jornada de estudos e projetos.
+                        Sou desenvolvedor Fullstack e de software desde 2023. Atualmente, estou na 7ª fase do bacharelado em Ciências da Computação na Faculdade Descomplica, com conclusão prevista para 2025. Em 2024, concluí o curso FuturoDEV do programa Floripa Mais Tec, que possui parcerias com SENAI, SEBRAE/SC, ACATE, LAB365 e a Prefeitura de Florianópolis. Antes de ingressar na área de tecnologia, trabalhei como Vigilante Patrimonial no Banco do Brasil por 10 anos, onde desenvolvi soft skills essenciais, como habilidades interpessoais, controle emocional, gerenciamento de crises, pontualidade, disciplina e capacidade de gerenciar riscos. Além disso, atuei como empreendedor de 2018 a 2022, o que me proporcionou competências em autogestão, gestão de pessoas, negociação, organização e liderança.
+                    </p> <!-- texto ate aqui - revisado e corrigido -->
+                    <p>
+                        Atualmente, continuo trabalhando na vigilância patrimonial na UFSC, mas estou em transição de carreira para a área de tecnologia. Me sinto preparado e confiante devido aos estudos e projetos que venho desenvolvendo. 
+                        Tenho um portfólio disponível em juniorpinho.dev, onde você pode encontrar mais informações sobre minha jornada de estudos e projetos.
                         Dentre meus projetos, destaco um projeto fullstack PERN (PostgreSQL, Express.js, React, Node.js) que foi containerizado com Docker e passou pelo processo de deploy, desenvolvido como parte do meu projeto de conclusão de curso no programa Floripa Mais Tec.</p>
                         <p>
                         Minha Paixão pela Tecnologia
