feat: 🎸 correções gramaticais

--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                                 Desenvolvo aplicações web completas e modernas, criando sites responsivos, sistemas web e CRUDs com integração frontend-backend. Utilizo tecnologias como <strong>React</strong> no frontend e <strong>Node.js</strong> com <strong>Express</strong> no backend, conectando a bancos de dados <strong>PostgreSQL</strong>. Todo o processo de desenvolvimento é alinhado com boas práticas, incluindo migrações de banco de dados (<strong>Sequelize</strong>), versionamento de código com <strong>GitHub</strong> e <strong>GitFlow</strong>, além de metodologias ágeis.
                             </p>
                             <p>
-                                Utilizo <strong>Docker</strong> para virtualização e armazenamento de banco de dados, realizando deploy em plataformas de hospedagens, garantindo que os projetos estejam sempre disponíveis e escaláveis.
+                                Utilizo <strong>Docker</strong> para virtualização e armazenamento de banco de dados, realizando o <strong>deploy</strong> em plataformas de hospedagem, garantindo que os projetos estejam sempre disponíveis e escaláveis.
                             </p>
                             <p>
                                 <!-- Atualmente trabalho em alguns projetos como: <br>
@@ -656,8 +656,9 @@
                                 <p><sub>Projeto Pessoal</sub></p>
                                 <p><a href="https://www.juniorpinho.dev/unicute" target="_blank">UnicuteRelax</a></p>
                                 <p>
-                                    Sou desenvolvedor do projeto "Unicute Relax", que tem como objetivo oferecer conteúdos relaxantes e anti estresse, incluindo músicas lo-fi, games e vídeos relaxantes. O projeto está presente no YouTube e no endereço https://www.juniorpinho.dev/unicute
+                                    Sou desenvolvedor do projeto "Unicute Relax", que tem como objetivo oferecer conteúdos relaxantes e anti estresse, incluindo músicas lo-fi, games e vídeos relaxantes.
                                 </p>
+                                <!-- <p>O projeto está presente no YouTube e no endereço https://www.juniorpinho.dev/unicute</p> -->
                                 <p>
                                     "UniCute Relax" é um projeto dedicado ao bem-estar e ao combate ao estresse. Nosso projeto anti estresse oferece conteúdos relaxantes para te auxiliar na concentração e foco durante suas atividades como trabalho, estudos, viagens e meditações.
                                 </p>
